samples/_failures_safe/1761191795_90937f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8c0ca148.c: In function ‘main’:
./samples/SAFE/__tmp_8c0ca148.c:128:18: error: ‘TOKEN’ undeclared (first use in this function)
  128 |             case TOKEN
      |                  ^~~~~
./samples/SAFE/__tmp_8c0ca148.c:128:18: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_8c0ca148.c:128:13: error: expected ‘:’ or ‘...’ at end of input
  128 |             case TOKEN
      |             ^~~~
./samples/SAFE/__tmp_8c0ca148.c:128:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8c0ca148.c:128:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8c0ca148.c:128:13: error: expected declaration or statement at end of input
